force-app/main/default/objects/KimbleOne__AssignmentScheduleImportLine__c/KimbleOne__AssignmentScheduleImportLine__c.object-meta.xml
<CustomObject>
    <label>Assignment Schedule Import Line</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>AssignmentScheduleIm Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assignment Schedule Import Lines</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>