force-app/main/default/objects/KimbleOne__AssignmentScheduleImportLine__c/fields/KimbleOne__EntryDate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__EntryDate__c</fullName>
    <label>Entry Date</label>
    <type>Date</type>
</CustomField>