force-app/main/default/objects/KimbleOne__AssignmentScheduleImportLine__c/fields/KimbleOne__NumberOfHours__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__NumberOfHours__c</fullName>
    <label>NumberOfHours</label>
    <precision>5</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>